--- a/css/styles.css
+++ b/css/styles.css
@@ -154,6 +154,7 @@ table{
     padding: 1rem;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0,0,0,0.2);
+    border-collapse: collapse;
 }
 
 h1{
@@ -217,19 +218,12 @@ ul {
     background-image: url('marc.jpg');
     background-size: cover;
     background-position: center;
-    box-shadow: 0 0 5px rgba(85, 29, 175, 0.2);
     width: 170px;
     height: 170px;
     border-radius: 70%;
     object-fit: cover;
-    transform: scale(1.);
 }
 
-.home{
-    margin-bottom: 20px;
-    text-align: center;
-    color: white;
-}
 
 
 
