--- a/css/landing.css
+++ b/css/landing.css
@@ -1,29 +1,41 @@
+:root{
+    --primary-color: #3713d6;
+    --secundary-color: #fdc630;
+}
+
+*{
+    margin: 0;
+    padding: 0;
+}
+
 body{
+    font-family: sans-serif;
     font-size: 17px;
-    font-family: Lato;
-    color:rgb(239, 184, 16);
+    line-height: 1.5;
+    color: rgb(104, 219, 140);
 }
 
 #showcase{
-    background-image: url(/img/madridweb.jpg)
+    background-image: url(/img/madridweb.jpg);
     height: 100vh;
     background-size: cover;
     background-position: center;
-    display:flex ;
+    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    font-size: 1.3em;
+    font-size: 1.3rem;
+    color: rgb(255, 255, 255);
 }
 
 #showcase::after{
-    content: '';
+    content: "";
     position: absolute;
-    top: 0px;
-    left: 0px;
-    background-color: rgba(0, 0, 0, 0.6);
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
     z-index: 1;
 }
 
@@ -33,39 +45,40 @@ h1, p, a, audio{
 
 a{
     text-decoration: none;
-    padding: 1px ;
-    color: rgb(239, 184, 16);
+    background-color: var(--primary-color);
+    border-radius: 10px;
+    color: white;
+    margin: 10px;
+    padding: 3px;
 }
 
 a:hover{
-    color: white;
+    background-color: rgb(59, 170, 61);
+    color: var(--primary-color);
+}
+
+.fonsVermell{
+    background-color: var(--secundary-color);
+    color: #2f1b1b;
 }
 
 #section-a{
-    background-color: rgb(239, 184, 16);
-    color: white;
     text-align: center;
-    padding: 20px;
 }
 
 #section-b{
-    background-color: #f4f4f4;
-    text-align: center;
+    color: var(--primary-color);
+}
+
+#section-c{
+    display: flex;
+}
+
+div{
     padding: 20px;
 }
 
-.section-c{
-    display: flex;
-    text-align: center;
-
-}
-
-.box{
-    background-color: rgb(239, 184, 16);
-    color: white;
-}
-
 .box-c{
-    background-color: #f4f4f4;
-}
+    color: var(--primary-color);
 
+}
